# gimp-plugin

./: CMakeLists.txt  README.md
assets/: file.txt
include/: box_blur.h  fill.h
src/: blur.c  box_blur.c  fill.c  hello_gtk.c  hello_plugin.c  hello_world.c  main.c
